fix: Update installation instructions for clarity and accuracy

--- a/web/public/legal/instructions.html
+++ b/web/public/legal/instructions.html
@@ -33,10 +33,10 @@
 
             <h3>Installation Methods</h3>
             
-            <h4>Method 1: Using the Executable (Recommended)</h4>
+            <h4>Method 1: Using the Installer (Recommended)</h4>
             <ol>
-                <li>Download the CaptiOCR executable (.exe) from the official website or repository</li>
-                <li>Place the executable in a folder where you have write permissions (e.g., your Documents folder)</li>
+                <li>Download the CaptiOCR Installer (.msi) from the official website or repository</li>
+                <li>Run the installation in a folder where you have write permissions (e.g., your Documents folder)</li>
                 <li>Double-click the executable to run the application</li>
                 <li><strong>Note:</strong> On first run, the application will:
                     <ul>
