fix: Update layout of CaptiOCR landing page feature sections for improved alignment and readability

--- a/web/public/caption-transcriber.html
+++ b/web/public/caption-transcriber.html
@@ -442,9 +442,9 @@
     </main>
     
     <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-12 px-4">
-        <div class="max-w-6xl mx-auto">
-            <div class="grid md:grid-cols-3 gap-8 mb-8">
+    <footer className="bg-gray-900 text-white py-12 px-4">
+        <div className="max-w-6xl mx-auto">
+            <div className="grid md:grid-cols-3 gap-8 mb-8">
                 <div>
                     <h3 class="text-xl font-semibold mb-4">CaptiOCR</h3>
                     <p class="text-gray-400">
