--- a/web/public/legal/transcriber-comparison.html
+++ b/web/public/legal/transcriber-comparison.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR - Comparison</title>
-    <meta name="description" content="CaptiOCR vs. Average Transcriber Assistant - Understand the advantages of CaptiOCR for real-time live captions text extraction. Capture captions without API integrations or meeting participation." />
+    <meta name="description" content="CaptiOCR vs. Classical Transcribers Assistant - Understand the advantages of CaptiOCR for real-time live captions text extraction. Capture captions without API integrations or meeting participation." />
     <meta name="keywords" content="Captions on screen text extraction, live captions reader, OCR software, transcription comparison, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -33,7 +33,7 @@
                 <tr>
                     <th>Feature</th>
                     <th>CaptiOCR</th>
-                    <th>Average Transcriber Assistant</th>
+                    <th>Classical Transcribers Assistant</th>
                 </tr>
                 <tr>
                     <td><strong>Mode of Operation</strong></td>
