fix: Add Meeting Transcriber link and update legal comparison content for clarity

--- a/web/public/legal/legal.html
+++ b/web/public/legal/legal.html
@@ -68,7 +68,10 @@
                     <td style="padding: 10px; border: 1px solid #ddd;">❌ Limited to platforms with built-in transcription</td>
                 </tr>
             </table>
-            
+            <div class="image-container" style="text-align: center; margin: 30px 0;">
+                <img src="../images/CaptiOCR vs Classical Transcibers.png" alt="CaptiOCR vs Classical Transcribers Comparison" style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <p style="margin-top: 10px; font-style: italic; color: #666;">Comparison between CaptiOCR and Classical Transcription Assistants</p>
+            </div>
             <h3>🔹 Why This Matters</h3>
             <p>Many platforms, such as Zoom and Google Meet, <strong>require explicit user consent</strong> before recording a meeting. CaptiOCR, however, functions just like taking notes on a notepad – it <strong>simply helps you organize your thoughts without invading privacy</strong>.</p>
             
