--- a/web/public/legal/transcriber-comparison.html
+++ b/web/public/legal/transcriber-comparison.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>CaptiOCR vs. Average Transcriber Assistant</h1>
+        <h1>CaptiOCR vs. Classical Transcriber Assistant</h1>
     </header>
     
     <nav class="bg-gray-100 p-4 text-center">
@@ -25,8 +25,13 @@
     <main>
         <section id="comparison">
             <h2>Why CaptiOCR Stands Out</h2>
-            <p><strong>Effective Date:</strong> February 2025</p>
+            <p><strong>Effective Date:</strong> March 2025</p>
             <p>CaptiOCR operates independently, without requiring API integrations or participation in meetings. Unlike other transcription assistants that need to be invited as meeting participants to capture audio and generate transcripts, CaptiOCR directly extracts text from the user's screen in real-time. This unique approach offers distinct advantages in terms of simplicity, privacy, and ease of use.</p>
+
+            <div class="image-container" style="text-align: center; margin: 30px 0;">
+                <img src="../images/CaptiOCR vs Classical Transcibers.png" alt="CaptiOCR vs Classical Transcribers Comparison" style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <p style="margin-top: 10px; font-style: italic; color: #666;">Comparison between CaptiOCR and Classical Transcription Assistants</p>
+            </div>
 
             <h3>Feature Comparison</h3>
             <table>
