fix: Add favicon links to multiple HTML pages for consistency

--- a/web/public/404.html
+++ b/web/public/404.html
@@ -8,6 +8,8 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Sorry, the page you are looking for could not be found. CaptiOCR provides real-time live captions text extraction for better meeting productivity." />
     <meta name="robots" content="noindex, follow">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     
     <!-- Tailwind CSS CDN - for styling consistent with other pages -->
     <script src="https://cdn.tailwindcss.com"></script>
