--- a/web/public/legal/terms.html
+++ b/web/public/legal/terms.html
@@ -7,6 +7,8 @@
     <meta name="description" content="CaptiOCR terms of use - understand your rights and responsibilities when using our OCR software." />
     <meta name="keywords" content="CaptiOCR terms, OCR software license, MIT license, open source terms, software usage rights" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
