--- a/web/public/legal/instructions.html
+++ b/web/public/legal/instructions.html
@@ -7,6 +7,8 @@
     <meta name="description" content="CaptiOCR - real-time live captions text extraction. Capture captions, enhance focus, and create transcripts automatically from live captions. Boost productivity with this open-source solution. Copy live captions, save live transcription, privacy-focused" />
     <meta name="keywords" content="Captions on screen text extraction, live captions reader, OCR software, copy paste live text extraction, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
