--- a/web/public/legal/privacy.html
+++ b/web/public/legal/privacy.html
@@ -7,6 +7,8 @@
     <meta name="description" content="CaptiOCR privacy policy - our commitment to your privacy and data protection." />
     <meta name="keywords" content="CaptiOCR privacy, OCR privacy policy, screen caption privacy, data protection, local processing, secure OCR" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
