--- a/web/public/legal/transcriber-comparison.html
+++ b/web/public/legal/transcriber-comparison.html
@@ -7,6 +7,8 @@
     <meta name="description" content="CaptiOCR vs. Classical Transcribers Assistant - Understand the advantages of CaptiOCR for real-time live captions text extraction. Capture captions without API integrations or meeting participation." />
     <meta name="keywords" content="Captions on screen text extraction, live captions reader, OCR software, transcription comparison, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
