--- a/web/public/live-caption-reader.html
+++ b/web/public/live-caption-reader.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR Live Caption Reader | Extract Text from Meeting Subtitles</title>
+    <meta name="robots" content="index, follow" />
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="CaptiOCR live caption reader automatically extracts text from on-screen captions during meetings, webinars, and online courses. Convert real-time subtitles to editable text with this privacy-focused tool." />
