--- a/web/public/caption-transcriber.html
+++ b/web/public/caption-transcriber.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR Live Caption Transcriber Software | CaptiOCR Text Extraction</title>
+    <meta name="robots" content="index, follow" />
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="CaptiOCR caption transcriber software automatically converts on-screen captions to editable text. Extract text from live captions during meetings, webinars, and video calls with this privacy-focused caption reader." />
