--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CaptiOCR - Real-Time Screen Live Captions Saving Tool</title>
+    <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Generate real-time captions and automatic transcripts with CaptiOCR. Boost productivity while protecting your privacy." />
     <meta name="keywords" content="CaptiOCR, real-time captions, automatic transcription, open-source OCR, live text extraction, copy live captions, digital productivity, privacy-focused, save transcripts, webinar, meeting, Zoom, Teams, Google Meet" />
