--- a/web/public/meeting-transcriber.html
+++ b/web/public/meeting-transcriber.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR Meeting Transcriber Software for Agile Teams | Scrum Master Documentation Tool</title>
+    <meta name="robots" content="index, follow" />
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="CaptiOCR meeting transcriber software automates agile meeting documentation for daily standups, sprint retrospectives, and stakeholder discussions. Perfect for Scrum Masters, Project Managers, and Agile Teams." />
