Optimize SEO keywords and meta descriptions for all pages
- Target specific keywords for each page (meeting, webinar, education)
- Add high-value keywords: meeting minutes, call transcription, audio to text
- Update meeting-transcriber.html for business/enterprise keywords
- Update caption-transcriber.html for webinar/video keywords
- Update live-caption-reader.html for education/course keywords
- Update all dates to August 2025
- Improve meta descriptions with long-tail keywords

--- a/web/public/caption-transcriber.html
+++ b/web/public/caption-transcriber.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CaptiOCR Live Caption Transcriber Software | CaptiOCR Text Extraction</title>
+    <title>Webinar Transcription & Video Caption Extraction Software - CaptiOCR</title>
     <meta name="robots" content="index, follow" />
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="CaptiOCR caption transcriber software automatically converts on-screen captions to editable text. Extract text from live captions during meetings, webinars, and video calls with this privacy-focused caption reader." />
-    <meta name="keywords" content="Live caption transcriber, live caption reader, caption to text converter, caption extraction tool, meeting caption transcription, video caption OCR, screen caption transcriber, caption OCR software, Teams caption extraction, Zoom caption reader" />
+    <meta name="description" content="How to transcribe webinars automatically with live caption extraction. Best webinar transcription software for YouTube, streaming platforms, and video calls. Convert subtitles to text instantly." />
+    <meta name="keywords" content="webinar transcription, video transcription, how to transcribe webinars automatically, webinar captions tool, subtitles for online events, video call transcription, conference call transcription, YouTube transcription, streaming transcription, live captions, subtitle to text converter, captioning tool for live online lessons" />
     
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="Caption Transcriber Software | CaptiOCR" />
