fix: Update SEO meta description and keywords for improved visibility

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,8 +6,8 @@
     <title>CaptiOCR - Real-Time Screen Live Captions Saving Tool</title>
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Best software for meeting transcription and minutes. Generate automated meeting notes, call transcription, and webinar transcription with CaptiOCR. Free audio to text converter with complete privacy." />
-    <meta name="keywords" content="meeting transcription, meeting minutes, call transcription, webinar transcription, audio to text, automated meeting notes, meeting notes generator, real-time captions, CaptiOCR, automatic transcription, Zoom transcription, Teams transcription, Google Meet captions, online lesson transcription, lecture transcription software" />
+    <meta name="description" content="Best no - agent privacy first software for meeting transcription and minutes. Generate automated meeting notes, call transcription, and webinar transcription with CaptiOCR. Free audio to text converter with complete privacy." />
+    <meta name="keywords" content="meeting transcription bot, meeting minutes, call transcription, webinar transcription, audio to text, automated meeting notes, meeting notes generator, real-time captions, CaptiOCR, automatic transcription, Zoom transcription, Teams transcription, Google Meet captions, online lesson transcription, lecture transcription software" />
     <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
     <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
