Enhance SEO and update page metadata
- Added canonical links to improve search engine indexing
- Updated meta descriptions for better clarity and relevance
- Changed titles for consistency and keyword optimization
- Adjusted last modified dates in sitemap and various HTML files
- Included new "Data Sovereignty" link in navigation across multiple pages
- Updated version.js to dynamically fetch and display version number

This commit aims to improve overall SEO performance and user experience across the site.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,8 +6,7 @@
     <title>CaptiOCR - Real-Time Screen Live Captions Saving Tool</title>
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Best no - agent privacy first software for meeting transcription and minutes. Generate automated meeting notes, call transcription, and webinar transcription with CaptiOCR. Free audio to text converter with complete privacy." />
-    <meta name="keywords" content="meeting transcription bot, meeting minutes, call transcription, webinar transcription, audio to text, automated meeting notes, meeting notes generator, real-time captions, CaptiOCR, automatic transcription, Zoom transcription, Teams transcription, Google Meet captions, online lesson transcription, lecture transcription software" />
+    <meta name="description" content="CaptiOCR captures live on-screen captions and creates private transcripts on your own device. Local-first transcription workflow for meetings, webinars, and online collaboration." />
     <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
     <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
@@ -15,6 +14,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="CaptiOCR - Enhance Focus with Real-Time Text Extraction" />
     <meta name="twitter:description" content="Reclaim your attention with CaptiOCR's free, privacy-focused text extraction. Create automated transcripts and summaries from any platform with on-screen captions." />
+    <link rel="canonical" href="https://www.captiocr.com/" />
     
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -38,11 +38,6 @@
             "price": "0",
             "priceCurrency": "USD"
           },
-          "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.8",
-            "ratingCount": "150"
-          },
           "author": {
             "@type": "Organization",
             "name": "CaptiOCR",
@@ -58,35 +53,6 @@
             "@type": "DownloadAction",
             "target": "https://github.com/carlosacchi/captiocr/releases"
           }
-        },
-        {
-          "@type": "FAQPage",
-          "mainEntity": [
-            {
-              "@type": "Question",
-              "name": "What is CaptiOCR?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "CaptiOCR is a free, open-source tool that extracts text from on-screen captions in real-time, allowing you to capture and save transcripts from video conferences, webinars, and streaming platforms."
-              }
-            },
-            {
-              "@type": "Question", 
-              "name": "Is CaptiOCR free to use?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Yes, CaptiOCR is completely free and open-source. All processing happens locally on your device for maximum privacy."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "Which platforms does CaptiOCR support?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "CaptiOCR works with any platform that displays on-screen captions, including Zoom, Microsoft Teams, Google Meet, YouTube, and more."
-              }
-            }
-          ]
         }
       ]
     }
