--- a/web/public/legal/terms.html
+++ b/web/public/legal/terms.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR - Terms of Use</title>
     <meta name="description" content="CaptiOCR terms of use - understand your rights and responsibilities when using our OCR software." />
-    <meta name="keywords" content="CaptiOCR terms, OCR software license, MIT license, open source terms, software usage rights" />
+    <link rel="canonical" href="https://www.captiocr.com/legal/terms.html" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -113,7 +113,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
     </footer>
 </body>
 </html>
