--- a/web/public/legal/transcriber-comparison.html
+++ b/web/public/legal/transcriber-comparison.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow" />
     
     <meta name="description" content="Learn about different approaches to meeting transcription. Understand how CaptiOCR's screen-based OCR technology provides a privacy-first alternative to traditional audio recording methods." />
-    <meta name="keywords" content="Captions on screen text extraction, live captions reader, OCR software, transcription comparison, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
+    <link rel="canonical" href="https://www.captiocr.com/legal/transcriber-comparison.html" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -198,7 +198,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
     </footer>
 </body>
 </html>
