--- a/web/public/legal/privacy.html
+++ b/web/public/legal/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaptiOCR - Privacy Policy</title>
     <meta name="description" content="CaptiOCR privacy policy - our commitment to your privacy and data protection." />
-    <meta name="keywords" content="CaptiOCR privacy, OCR privacy policy, screen caption privacy, data protection, local processing, secure OCR" />
+    <link rel="canonical" href="https://www.captiocr.com/legal/privacy.html" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -113,7 +113,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> CaptiOCR | <a href="https://www.captiocr.com/">www.captiocr.com</a></p>
     </footer>
 </body>
 </html>
